c: Correct type compatibility for bit-fields [PR117828]

Add missing test for consistency of bit-fields when comparing tagged
types for compatibility.

	PR c/117828

gcc/c/ChangeLog:
	* c-typeck.cc (tagged_types_tu_compatible_p): Add check.

gcc/testsuite/ChangeLog:
	* gcc.dg/c23-tag-bitfields-1.c: New test.
	* gcc.dg/pr117828.c: New test.