gcc/testsuite/gcc.dg/pr117828.c
@@ -1,0 +1,14 @@
+/* { dg-do compile } */
+/* { dg-options "-g" } */
+
+struct {
+  struct {
+    int Reserved : 32;
+  } u;
+} v;
+struct {
+  struct {
+    int Reserved;
+  } u;
+} w;
+
